--- a/css/main.css
+++ b/css/main.css
@@ -335,10 +335,10 @@ body {
         background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
       .card__side--back-3 {
         background-image: linear-gradient(to right bottom, #2998ff, #5643fa); }
-  .card:hover .card__side--front {
+/*   .card:hover .card__side--front {
     transform: rotateY(-180deg); }
   .card:hover .card__side--back {
-    transform: rotateY(0); }
+    transform: rotateY(0); } */
   .card__picture {
     background-size: cover;
     height: 23rem;
